src/objects/Business_Role_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Business_Role__c</fullName>
        <label>Business Role</label>
        <referenceTo>Business_Role__c</referenceTo>
        <relationshipLabel>Business Role Entries</relationshipLabel>
        <relationshipName>Business_Role_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Id_Calc__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External ID (formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>Unique external ID (Business Role Entry Name)</description>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>Name of User Field or Custom Handler</description>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>=</fullName>
                    <default>true</default>
                    <label>=</label>
                </value>
                <value>
                    <fullName>!=</fullName>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Field</fullName>
                    <default>true</default>
                    <label>Field</label>
                </value>
                <value>
                    <fullName>ApexHandler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Business Role Entry</label>
    <nameField>
        <label>Business Role Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Role Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>